// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboBox Renders ComboBox correctly 1`] = `
<div
  autoComplete="on"
  className="ms-ComboBox-container "
>
  <div
    className=
        ms-ComboBox
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: #ffffff;
          border-color: #a6a6a6;
          border-style: solid;
          border-width: 1px;
          box-shadow: none;
          box-sizing: border-box;
          color: #333333;
          cursor: text;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          margin-left: 0;
          outline: 0;
          overflow: hidden;
          padding-bottom: 1px;
          padding-left: 12px;
          padding-right: 32px;
          padding-top: 1px;
          position: relative;
          text-overflow: ellipsis;
          user-select: none;
          white-space: nowrap;
        }
        & .ms-Label {
          display: inline-block;
          margin-bottom: 8px;
        }
        & input::-ms-clear {
          display: none;
        }
        &.is-open {
          border-color: #0078d4;
        }
        @media screen and (-ms-high-contrast: active){&.is-open {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          border-width: 2px;
          color: HighlightText;
          padding-bottom: 0;
          padding-left: 11px;
          padding-top: 0;
        }
        @media screen and (-ms-high-contrast: active){&.is-open .ms-ComboBox-CaretDown-button {
          right: -2px;
          top: -2px;
        }
        &:hover {
          border-color: #212121;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          color: HighlightText;
        }
        &:active {
          border-color: #0078d4;
        }
        @media screen and (-ms-high-contrast: active){&:active {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          border-width: 2px;
          color: HighlightText;
          padding-bottom: 0;
          padding-left: 11px;
          padding-top: 0;
        }
        @media screen and (-ms-high-contrast: active){&:active .ms-ComboBox-CaretDown-button {
          right: -2px;
          top: -2px;
        }
        &:focus {
          border-color: #0078d4;
        }
        @media screen and (-ms-high-contrast: active){&:focus {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          border-width: 2px;
          color: HighlightText;
          padding-bottom: 0;
          padding-left: 11px;
          padding-top: 0;
        }
        @media screen and (-ms-high-contrast: active){&:focus .ms-ComboBox-CaretDown-button {
          right: -2px;
          top: -2px;
        }
    data-ktp-target={undefined}
    id="ComboBox0wrapper"
  >
    <input
      aria-activedescendant={undefined}
      aria-autocomplete="both"
      aria-describedby="ComboBox0-option"
      aria-disabled={undefined}
      aria-expanded={false}
      aria-label={undefined}
      aria-labelledby={undefined}
      aria-owns="ComboBox0-list"
      aria-readonly="true"
      autoCapitalize="off"
      autoComplete="off"
      className=
          ms-ComboBox-Input
          {
            border-style: none;
            box-sizing: border-box;
            font: inherit;
            height: 28px;
            outline: none;
            padding-bottom: 0;
            padding-left: 0;
            padding-right: 0;
            padding-top: 0;
            text-overflow: ellipsis;
            width: 100%;
          }
      data-is-interactable={true}
      data-ktp-execute-target={undefined}
      data-lpignore={true}
      id="ComboBox0-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      readOnly={true}
      role="combobox"
      spellCheck={false}
      title={undefined}
      type="text"
      value=""
    />
    <button
      aria-describedby={null}
      aria-hidden={true}
      aria-label={undefined}
      aria-labelledby={null}
      aria-pressed={false}
      checked={false}
      className=
          ms-Button
          ms-ComboBox-CaretDown-button
          ms-Button--icon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            background-color: transparent;
            border-radius: 0px;
            border: 1px solid transparent;
            box-sizing: border-box;
            color: #666666;
            cursor: default;
            display: inline-block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            height: 32px;
            line-height: 30px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 4px;
            padding-right: 4px;
            padding-top: 0;
            position: absolute;
            right: -1px;
            text-align: center;
            text-decoration: none;
            top: -1px;
            user-select: none;
            vertical-align: top;
            width: 32px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 0px;
            content: "";
            left: 0px;
            outline: 1px solid #666666;
            position: absolute;
            right: 0px;
            top: 0px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
            border: none;
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active){& {
            -ms-high-contrast-adjust: none;
            background-color: ButtonFace;
            border-color: ButtonText;
            color: ButtonText;
          }
          &:hover {
            background-color: #f4f4f4;
            color: #212121;
            cursor: pointer;
          }
          &:active {
            background-color: #eaeaea;
            color: #212121;
          }
      data-is-focusable={false}
      disabled={undefined}
      onClick={[Function]}
      role="presentation"
      tabIndex={-1}
      type="button"
    >
      <div
        className=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-Button-icon
              {
                display: inline-block;
              }
              {
                flex-shrink: 0;
                font-size: 12px;
                height: 16px;
                line-height: 16px;
                margin-bottom: 0;
                margin-left: 4px;
                margin-right: 4px;
                margin-top: 0;
                text-align: center;
                vertical-align: middle;
              }
          data-icon-name="ChevronDown"
          role="presentation"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`ComboBox renders a ComboBox with a Keytip correctly 1`] = `
<div
  autoComplete="on"
  className="ms-ComboBox-container "
>
  <div
    className=
        ms-ComboBox
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background-color: #ffffff;
          border-color: #a6a6a6;
          border-style: solid;
          border-width: 1px;
          box-shadow: none;
          box-sizing: border-box;
          color: #333333;
          cursor: text;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          margin-left: 0;
          outline: 0;
          overflow: hidden;
          padding-bottom: 1px;
          padding-left: 12px;
          padding-right: 32px;
          padding-top: 1px;
          position: relative;
          text-overflow: ellipsis;
          user-select: none;
          white-space: nowrap;
        }
        & .ms-Label {
          display: inline-block;
          margin-bottom: 8px;
        }
        & input::-ms-clear {
          display: none;
        }
        &.is-open {
          border-color: #0078d4;
        }
        @media screen and (-ms-high-contrast: active){&.is-open {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          border-width: 2px;
          color: HighlightText;
          padding-bottom: 0;
          padding-left: 11px;
          padding-top: 0;
        }
        @media screen and (-ms-high-contrast: active){&.is-open .ms-ComboBox-CaretDown-button {
          right: -2px;
          top: -2px;
        }
        &:hover {
          border-color: #212121;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          color: HighlightText;
        }
        &:active {
          border-color: #0078d4;
        }
        @media screen and (-ms-high-contrast: active){&:active {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          border-width: 2px;
          color: HighlightText;
          padding-bottom: 0;
          padding-left: 11px;
          padding-top: 0;
        }
        @media screen and (-ms-high-contrast: active){&:active .ms-ComboBox-CaretDown-button {
          right: -2px;
          top: -2px;
        }
        &:focus {
          border-color: #0078d4;
        }
        @media screen and (-ms-high-contrast: active){&:focus {
          -ms-high-contrast-adjust: none;
          background-color: Window;
          border-color: Highlight;
          border-width: 2px;
          color: HighlightText;
          padding-bottom: 0;
          padding-left: 11px;
          padding-top: 0;
        }
        @media screen and (-ms-high-contrast: active){&:focus .ms-ComboBox-CaretDown-button {
          right: -2px;
          top: -2px;
        }
    data-ktp-target="ktp-a"
    id="ComboBox4wrapper"
  >
    <input
      aria-activedescendant={undefined}
      aria-autocomplete="both"
      aria-describedby="ComboBox4-option ktp-layer-id ktp-aria-separator-id ktp-a"
      aria-disabled={undefined}
      aria-expanded={false}
      aria-label={undefined}
      aria-labelledby={undefined}
      aria-owns="ComboBox4-list"
      aria-readonly="true"
      autoCapitalize="off"
      autoComplete="off"
      className=
          ms-ComboBox-Input
          {
            border-style: none;
            box-sizing: border-box;
            font: inherit;
            height: 28px;
            outline: none;
            padding-bottom: 0;
            padding-left: 0;
            padding-right: 0;
            padding-top: 0;
            text-overflow: ellipsis;
            width: 100%;
          }
      data-is-interactable={true}
      data-ktp-execute-target="ktp-a"
      data-lpignore={true}
      id="ComboBox4-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      readOnly={true}
      role="combobox"
      spellCheck={false}
      title={undefined}
      type="text"
      value=""
    />
    <button
      aria-describedby={null}
      aria-hidden={true}
      aria-label={undefined}
      aria-labelledby={null}
      aria-pressed={false}
      checked={false}
      className=
          ms-Button
          ms-ComboBox-CaretDown-button
          ms-Button--icon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            background-color: transparent;
            border-radius: 0px;
            border: 1px solid transparent;
            box-sizing: border-box;
            color: #666666;
            cursor: default;
            display: inline-block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 12px;
            font-weight: 400;
            height: 32px;
            line-height: 30px;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 4px;
            padding-right: 4px;
            padding-top: 0;
            position: absolute;
            right: -1px;
            text-align: center;
            text-decoration: none;
            top: -1px;
            user-select: none;
            vertical-align: top;
            width: 32px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 0px;
            content: "";
            left: 0px;
            outline: 1px solid #666666;
            position: absolute;
            right: 0px;
            top: 0px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
            border: none;
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active){& {
            -ms-high-contrast-adjust: none;
            background-color: ButtonFace;
            border-color: ButtonText;
            color: ButtonText;
          }
          &:hover {
            background-color: #f4f4f4;
            color: #212121;
            cursor: pointer;
          }
          &:active {
            background-color: #eaeaea;
            color: #212121;
          }
      data-is-focusable={false}
      disabled={undefined}
      onClick={[Function]}
      role="presentation"
      tabIndex={-1}
      type="button"
    >
      <div
        className=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-Button-icon
              {
                display: inline-block;
              }
              {
                flex-shrink: 0;
                font-size: 12px;
                height: 16px;
                line-height: 16px;
                margin-bottom: 0;
                margin-left: 4px;
                margin-right: 4px;
                margin-top: 0;
                text-align: center;
                vertical-align: middle;
              }
          data-icon-name="ChevronDown"
          role="presentation"
        />
      </div>
    </button>
  </div>
</div>
`;
